fix for issue #88

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -9,7 +9,7 @@ v1.05
 * Added loadFrom() method for FlxSprite. So you can easily copy graphics from one FlxSprite to another. This is especially usefull for cpp target. Thanks to Phoenity for this idea
 * Initial support for Haxe 2.10
 * Added basic support for multitouch (see FlxG.touchManager and multitouch example on github repo). Flash version requires Flash Player 10.1 now.
-* Compile fix for FlxPreloader. Thanks to Tali for it.
+* Compile fix for FlxPreloader on mac platform. Thanks to Talii for it.
 * Integrated tweening system from HaxePunk (Thank you, Matt Tuttle). All FlxBasic's subclasses have this functionality now. See addTween(), removeTween(), clearTweens() methods of FlxBasic instances and 'org.flixel.tweens' package.
 * Added basic support for Joystick input (See FlxG.joystickManager and org.flixel.system.input.Joystick and org.flixel.system.input.JoystickManager classes for details). I need someone to test it.
 
