--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 flixel CHANGELOG
 
+v1.06
+------------------------------
+* Added FlxKongregate plugin. Thanks to goldengrave for porting this class.
+
 v1.05
 ------------------------------
 * Fixed bug with animation callback for FlxSprite on cpp target
