--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,10 +2,10 @@ flixel CHANGELOG
 
 v1.06
 ------------------------------
-* Added FlxKongregate plugin. Thanks to goldengrave for porting this class.
+* Added FlxKongregate plugin (flash only). Thanks to goldengrave for porting this class.
 * Fixed bug with FlxButton's makeGraphic() crashing on cpp and neko targets.
 * Fixed bug with VarTween and MultivarTween on Haxe 2.10
-* Fixed bug when FlxGroup's tweens weren's updated
+* Fixed bug when FlxGroup's tweens weren't updated
 
 v1.05
 ------------------------------
