User Interface/Menus : Fixed consistency issues across flash/cpp target. Ditched misbehaving fonts.

--- a/User Interface/Menus/assets/locales/nb-NO/ui.csv
+++ b/User Interface/Menus/assets/locales/nb-NO/ui.csv
@@ -9,6 +9,11 @@
 "$SAVE_DELETE","Slette",
 "$SAVE_NEW_GAME","Nyt Spill",
 "$SAVE_NEW_GAME+","Nyt Spill+",
+"$SAVE_SLOT_1_MSG","Uteksturert <LQ>9-slice<RQ> krom med skalering",
+"$SAVE_SLOT_2_MSG","Teksturert <LQ>9-slice<RQ> krom med flislegging",
+"$SAVE_SLOT_DATA","Mane Lionhair<N>Nivå 5",
+"$SAVE_SLOT_TIME","10 timer, 15 min",
+"$SAVE_SLOT_DATE","1. Januar, 1970",
 "$MENU_THING_1","Ting 1",
 "$MENU_THING_2","Ting 2",
 "$MENU_1_FISH","En Fisk",
