--- a/User Interface/Menus/assets/locales/en-US/ui.csv
+++ b/User Interface/Menus/assets/locales/en-US/ui.csv
@@ -9,6 +9,11 @@
 "$SAVE_DELETE","Delete",
 "$SAVE_NEW_GAME","New Game",
 "$SAVE_NEW_GAME+","New Game+",
+"$SAVE_SLOT_1_MSG","Untextured 9-slice chrome w/ scaling",
+"$SAVE_SLOT_2_MSG","Textured 9-slice chrome w/ tiling",
+"$SAVE_SLOT_DATA","Mane Lionhair<N>Level 5",
+"$SAVE_SLOT_TIME","10 hours, 15 min",
+"$SAVE_SLOT_DATE","January 1, 1970",
 "$MENU_THING_1","Thing 1",
 "$MENU_THING_2","Thing 2",
 "$MENU_1_FISH","One Fish",
