--- a/User Interface/RPG Interface/assets/locales/nb-NO/ui.csv
+++ b/User Interface/RPG Interface/assets/locales/nb-NO/ui.csv
@@ -3,6 +3,7 @@
 "$TITLE_MENUS","Menyer",
 "$TITLE_BATTLES","Kamp",
 "$TITLE_DEFAULT","Standard-bilde test",
+"$TITLE_CODE","Kode test",
 "$SAVE_PLAY","Spill",
 "$SAVE_PLAY+","Spill+",
 "$SAVE_IMPORT","Importere",
@@ -27,4 +28,5 @@
 "$MENU_TAB_4","Tab 4",
 "$MENU_TOGGLE","Endre",
 "$DEFAULT_DESC","Widget'ene du ser her bruker BARE standard-bilder fra FlxUI!",
+"$CODE_DESC","Widget'ene du ser her var laget bare med kode og ingen xml-fil!",
 "$MISC_BACK","Tilbake",
