RPG Interface: Update to showcase pop-up dialogs

--- a/User Interface/RPG Interface/assets/locales/en-US/ui.csv
+++ b/User Interface/RPG Interface/assets/locales/en-US/ui.csv
@@ -4,6 +4,7 @@
 "$TITLE_BATTLES","Battle",
 "$TITLE_DEFAULT","Default asset test",
 "$TITLE_CODE","Code test",
+"$TITLE_POPUP","Popup",
 "$SAVE_PLAY","Play",
 "$SAVE_PLAY+","Play+",
 "$SAVE_IMPORT","Import",
@@ -30,3 +31,17 @@
 "$DEFAULT_DESC","The widgets you see here use ONLY default FlxUI Assets!",
 "$CODE_DESC","The widgets you see here were created with code and no xml file!",
 "$MISC_BACK","Back",
+"$POPUP_YES","Yes",
+"$POPUP_NO","No",
+"$POPUP_CANCEL","Cancel",
+"$POPUP_OK","Ok",
+"$POPUP_BACK","Back",
+"$POPUP_CLOSE","Close",
+"$POPUP_BTN_2ND_POPUP","2nd Popup",
+"$POPUP_BTN_2_BUTTONS","2 Buttons",
+"$POPUP_DEMO_0_TITLE","Popup - Demo 0",
+"$POPUP_DEMO_0_BODY","Click a button and see what happens.",
+"$POPUP_DEMO_1_TITLE","Popup - Demo 1",
+"$POPUP_DEMO_1_BODY","A single pop-up instance can contain multiple layouts.",
+"$POPUP_SIMPLE_TITLE","Another Popup!",
+"$POPUP_SIMPLE_BODY","You can open multiple pop-ups!",
