--- a/User Interface/RPG Interface/assets/locales/nb-NO/ui.csv
+++ b/User Interface/RPG Interface/assets/locales/nb-NO/ui.csv
@@ -4,6 +4,7 @@
 "$TITLE_BATTLES","Kamp",
 "$TITLE_DEFAULT","Standard-bilde test",
 "$TITLE_CODE","Kode test",
+"$TITLE_POPUP","Popup",
 "$SAVE_PLAY","Spill",
 "$SAVE_PLAY+","Spill+",
 "$SAVE_IMPORT","Importere",
@@ -30,3 +31,17 @@
 "$DEFAULT_DESC","Widget'ene du ser her bruker BARE standard-bilder fra FlxUI!",
 "$CODE_DESC","Widget'ene du ser her var laget bare med kode og ingen xml-fil!",
 "$MISC_BACK","Tilbake",
+"$POPUP_YES","Ja",
+"$POPUP_NO","Nei",
+"$POPUP_CANCEL","Avbryte",
+"$POPUP_OK","Ok",
+"$POPUP_BACK","Tilbake",
+"$POPUP_CLOSE","Lukke",
+"$POPUP_BTN_2ND_POPUP","Andre Popup",
+"$POPUP_BTN_2_BUTTONS","2 Knapper",
+"$POPUP_DEMO_0_TITLE","Popup - Demo 0",
+"$POPUP_DEMO_0_BODY","Klikk en knapp og se hva som sjer.",
+"$POPUP_DEMO_1_TITLE","Popup - Demo 1",
+"$POPUP_DEMO_1_BODY","En enkelt pop-up instans kan inneholde flere varianter.",
+"$POPUP_SIMPLE_TITLE","Også en Popup!",
+"$POPUP_SIMPLE_BODY","Du kan åpne flere popup'er!",
