--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -10,6 +10,10 @@ v.3.0.2
 * FlxSpriteUtil drawing functions: Support for RGBA colors, new lineStyle param
 * MouseEventManager: Fix pixel-perfect checks for touchscreens
 * FlxSpriteGroup: Get rid of motion variable (velocity etc) overrides to fix a bug with FlxPath, add width and height getters
+* Basic HTML5 gamepad support (Chrome and Opera)
+* FlxG.android added (supports the back and menu keys for now)
+* FlxGame constructor: Added StartFullscreen param for desktop targets
+* FlxTypedGroup: Added iterators / iterator(), forEach(), forEachAlive(), forEachDead(), forEachExists()
 
 v.3.0.1
 ------------------------------
