--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -15,6 +15,7 @@ v.3.0.2
 * FlxGame constructor: Added StartFullscreen param for desktop targets
 * FlxTypedGroup: Added iterators / iterator(), forEach(), forEachAlive(), forEachDead(), forEachExists()
 * FlxColorTween now accepts FlxSprite as a parameter and it will change its color automatically
+* QuadPath doesn't generate control points anymore
 
 v.3.0.1
 ------------------------------
