Updating demo to do stuff with FlxShapes

--- a/User Interface/RPG Interface/assets/locales/en-US/ui.csv
+++ b/User Interface/RPG Interface/assets/locales/en-US/ui.csv
@@ -5,6 +5,7 @@
 "$TITLE_DEFAULT","Default asset test",
 "$TITLE_CODE","Code test",
 "$TITLE_POPUP","Popup",
+"$TITLE_SHAPES","Shapes",
 "$SAVE_PLAY","Play",
 "$SAVE_PLAY+","Play+",
 "$SAVE_IMPORT","Import",
