--- a/User Interface/RPG Interface/assets/locales/nb-NO/ui.csv
+++ b/User Interface/RPG Interface/assets/locales/nb-NO/ui.csv
@@ -5,6 +5,7 @@
 "$TITLE_DEFAULT","Standard-bilde test",
 "$TITLE_CODE","Kode test",
 "$TITLE_POPUP","Popup",
+"$TITLE_SHAPES","Figurer",
 "$SAVE_PLAY","Spill",
 "$SAVE_PLAY+","Spill+",
 "$SAVE_IMPORT","Importere",
